--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/public/css/main.css
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/public/css/main.css
@@ -50,11 +50,14 @@ th {
     border: 2px solid black;
     background-color: mediumaquamarine;
     text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 td {
     border: 1px solid black;
     background-color: white;
-
+    padding-left: 5px;
+    padding-right: 5px;
 }
 button {
     background-color: aquamarine;
@@ -100,6 +103,10 @@ hr {
     background-color: #66B2FF;
 }
 
+.extra-espacio-vertical{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
 /* CSS PARA CREACION AUXILIAR DE LAS ANIMACIONES REQUERIDAS Y "DELAYS" */
 .agregar-delay-1 {
